<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/app_name_fancy"
                android:textSize="32sp"
                android:textColor="@color/colorTextPrimary"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:drawSelectorOnTop="true"
        android:orientation="vertical"
        android:paddingBottom="72dp"
        android:scrollbarStyle="outsideOverlay"
        android:layout_below="@id/appbar"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_conversation"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/no_team_layout">
        <ImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:src="@drawable/ic_chat_bubble"
            android:contentDescription="@string/conversations_icon_description"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/conversations_startup"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:icon="@drawable/ic_message"
        android:backgroundTint="@color/colorAccent"
        app:elevation="4dp"
        android:text="@string/conversations_fab"
        android:textColor="@android:color/white"
        app:iconTint="@android:color/white"/>

</RelativeLayout>