<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_fancy"
        android:textSize="56sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="Username"
            android:textColorHint="@color/colorTextSecondary"
            app:boxBackgroundColor="@color/colorEditTextBg"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_login_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:id="@+id/login_button"
                    android:layout_marginStart="48dp"
                    android:fontFamily="sans-serif-condensed-medium"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/sign_up_button"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="48dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>